# Web-Browser

./: README.md  Requirements.txt  pyproject.toml
src/pyqt_web_browser/: __init__.py  app.py  browser.py  main.py  utils.py
src/pyqt_web_browser/ui/: main_window.py
tests/: test_utils.py
